fixed jumpy index page

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,7 +17,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
